add flashcards and basic click function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,91 @@
     <title>jQuery Flashcards</title>
   </head>
   <body>
-
+    <div class="container">
+      <h1>Learn jQuery!!!</h1>
+      <h3>With flashcards...</h3>
+      <div class="center-div">
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="term">
+              <h3 class='clickable'>JavaScript</h3>
+            </div>
+            <div class="definition">
+              <h3>JavaScript</h3>
+              <p>Definition</p>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="term">
+              <h3 class='clickable'>JavaScript</h3>
+            </div>
+            <div class="definition">
+              <h3>JavaScript</h3>
+              <p>Definition</p>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="term">
+              <h3 class='clickable'>JavaScript</h3>
+            </div>
+            <div class="definition">
+              <h3>JavaScript</h3>
+              <p>Definition</p>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="term">
+              <h3 class='clickable'>JavaScript</h3>
+            </div>
+            <div class="definition">
+              <h3>JavaScript</h3>
+              <p>Definition</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <p>Functions</p>
+          </div>
+          <div class="col-sm-3">
+            <p>Methods</p>
+          </div>
+          <div class="col-sm-3">
+            <p>Arguments</p>
+          </div>
+          <div class="col-sm-3">
+            <p>Parameters</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <p>Return</p>
+          </div>
+          <div class="col-sm-3">
+            <p>Chaining Methods</p>
+          </div>
+          <div class="col-sm-3">
+            <p>Strings</p>
+          </div>
+          <div class="col-sm-3">
+            <p>Booleans</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <p>Undefined</p>
+          </div>
+          <div class="col-sm-3">
+            <p>NaN</p>
+          </div>
+          <div class="col-sm-3">
+            <p>Escape</p>
+          </div>
+          <div class="col-sm-3">
+            <p>Alert</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
