--- a/index.html
+++ b/index.html
@@ -11,43 +11,51 @@
   <body>
     <div class="container">
       <h1>Learn jQuery!!!</h1>
-      <h3>With flashcards...</h3>
+      <h2>With flashcards...</h2>
       <div class="center-div">
         <div class="row">
           <div class="col-sm-3">
-            <div class="term">
-              <h3 class='clickable'>JavaScript</h3>
-            </div>
-            <div class="definition">
-              <h3>JavaScript</h3>
-              <p>Definition</p>
-            </div>
-          </div>
-          <div class="col-sm-3">
-            <div class="term">
-              <h3 class='clickable'>JavaScript</h3>
-            </div>
-            <div class="definition">
-              <h3>JavaScript</h3>
-              <p>Definition</p>
+            <div class="well">
+              <div class="term">
+                <h3 class='clickable'>JavaScript</h3>
+              </div>
+              <div class="definition">
+                <h3>JavaScript</h3>
+                <p>Definition</p>
+              </div>
             </div>
           </div>
           <div class="col-sm-3">
-            <div class="term">
-              <h3 class='clickable'>JavaScript</h3>
-            </div>
-            <div class="definition">
-              <h3>JavaScript</h3>
-              <p>Definition</p>
+            <div class="well">
+              <div class="term">
+                <h3 class='clickable'>JavaScript</h3>
+              </div>
+              <div class="definition">
+                <h3>JavaScript</h3>
+                <p>Definition</p>
+              </div>
             </div>
           </div>
           <div class="col-sm-3">
-            <div class="term">
-              <h3 class='clickable'>JavaScript</h3>
+            <div class="well">
+              <div class="term">
+                <h3 class='clickable'>JavaScript</h3>
+              </div>
+              <div class="definition">
+                <h3>JavaScript</h3>
+                <p>Definition</p>
+              </div>
             </div>
-            <div class="definition">
-              <h3>JavaScript</h3>
-              <p>Definition</p>
+          </div>
+          <div class="col-sm-3">
+            <div class="well">
+              <div class="term">
+                <h3 class='clickable'>JavaScript</h3>
+              </div>
+              <div class="definition">
+                <h3>JavaScript</h3>
+                <p>Definition</p>
+              </div>
             </div>
           </div>
         </div>
