add more definitions

--- a/index.html
+++ b/index.html
@@ -12,95 +12,209 @@
     <div class="container">
       <h1>Learn jQuery!!!</h1>
       <h2>With flashcards...</h2>
+      <!--flashcards-->
       <div class="center-div">
         <div class="row">
           <div class="col-sm-3">
             <div class="well">
-              <div class="term">
-                <h3 class='clickable'>JavaScript</h3>
+              <div class="termJS">
+                <h3 class='clickableJS'>JavaScript</h3>
               </div>
-              <div class="definition">
-                <h3>JavaScript</h3>
-                <p>Definition</p>
+              <div class="definitionJS">
+                <h3 class='clickableJS'>JavaScript</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
+
           <div class="col-sm-3">
             <div class="well">
-              <div class="term">
-                <h3 class='clickable'>JavaScript</h3>
+              <div class="termOP">
+                <h3 class='clickableOP'>Operators</h3>
               </div>
-              <div class="definition">
-                <h3>JavaScript</h3>
-                <p>Definition</p>
+              <div class="definitionOP">
+                <h3 class='clickableOP'>Operators</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
+
           <div class="col-sm-3">
             <div class="well">
-              <div class="term">
-                <h3 class='clickable'>JavaScript</h3>
+              <div class="termVA">
+                <h3 class='clickableVA'>Variables</h3>
               </div>
-              <div class="definition">
-                <h3>JavaScript</h3>
-                <p>Definition</p>
+              <div class="definitionVA">
+                <h3 class='clickableVA'>Variables</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
+
           <div class="col-sm-3">
             <div class="well">
-              <div class="term">
-                <h3 class='clickable'>JavaScript</h3>
+              <div class="termVN">
+                <h3 class='clickableVN'>Variable Names</h3>
               </div>
-              <div class="definition">
-                <h3>JavaScript</h3>
-                <p>Definition</p>
+              <div class="definitionVN">
+                <h3 class='clickableVN'>Varible Names</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
         </div>
+        <!--row2-->
         <div class="row">
           <div class="col-sm-3">
-            <p>Functions</p>
+            <div class="well">
+              <div class="termFU">
+                <h3 class='clickableFU'>Functions</h3>
+              </div>
+              <div class="definitionFU">
+                <h3 class='clickableFU'>Functions</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
+
           <div class="col-sm-3">
-            <p>Methods</p>
+            <div class="well">
+              <div class="termMT">
+                <h3 class='clickableMT'>Methods</h3>
+              </div>
+              <div class="definitionMT">
+                <h3 class='clickableMT'>Methods</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
+
           <div class="col-sm-3">
-            <p>Arguments</p>
+            <div class="well">
+              <div class="termAR">
+                <h3 class='clickableAR'>Arguments</h3>
+              </div>
+              <div class="definitionAR">
+                <h3 class='clickableAR'>Arguments</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
+
           <div class="col-sm-3">
-            <p>Parameters</p>
+            <div class="well">
+              <div class="termPR">
+                <h3 class='clickablePR'>Parameters</h3>
+              </div>
+              <div class="definitionPR">
+                <h3 class='clickablePR'>Parameters</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
         </div>
+        <!--row3-->
         <div class="row">
           <div class="col-sm-3">
-            <p>Return</p>
+            <div class="well">
+              <div class="termJS">
+                <h3 class='clickableJS'>JavaScript</h3>
+              </div>
+              <div class="definitionJS">
+                <h3 class='clickableJS'>JavaScript</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
+
           <div class="col-sm-3">
-            <p>Chaining Methods</p>
+            <div class="well">
+              <div class="termOP">
+                <h3 class='clickableOP'>Operators</h3>
+              </div>
+              <div class="definitionOP">
+                <h3 class='clickableOP'>Operators</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
+
           <div class="col-sm-3">
-            <p>Strings</p>
+            <div class="well">
+              <div class="termVA">
+                <h3 class='clickableVA'>Variables</h3>
+              </div>
+              <div class="definitionVA">
+                <h3 class='clickableVA'>Variables</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
+
           <div class="col-sm-3">
-            <p>Booleans</p>
+            <div class="well">
+              <div class="termVN">
+                <h3 class='clickableVN'>Variable Names</h3>
+              </div>
+              <div class="definitionVN">
+                <h3 class='clickableVN'>Varible Names</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
         </div>
+        <!--row4-->
         <div class="row">
           <div class="col-sm-3">
-            <p>Undefined</p>
+            <div class="well">
+              <div class="termJS">
+                <h3 class='clickableJS'>JavaScript</h3>
+              </div>
+              <div class="definitionJS">
+                <h3 class='clickableJS'>JavaScript</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
+
           <div class="col-sm-3">
-            <p>NaN</p>
+            <div class="well">
+              <div class="termOP">
+                <h3 class='clickableOP'>Operators</h3>
+              </div>
+              <div class="definitionOP">
+                <h3 class='clickableOP'>Operators</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
+
           <div class="col-sm-3">
-            <p>Escape</p>
+            <div class="well">
+              <div class="termVA">
+                <h3 class='clickableVA'>Variables</h3>
+              </div>
+              <div class="definitionVA">
+                <h3 class='clickableVA'>Variables</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
+
           <div class="col-sm-3">
-            <p>Alert</p>
+            <div class="well">
+              <div class="termVN">
+                <h3 class='clickableVN'>Variable Names</h3>
+              </div>
+              <div class="definitionVN">
+                <h3 class='clickableVN'>Varible Names</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+            </div>
           </div>
         </div>
+
+
       </div>
     </div>
   </body>
