--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
@@ -16,9 +17,10 @@
       <div class="center-div">
         <div class="row">
           <div class="col-sm-3">
-            <div class="well">
+            <div id="JS" class="well">
               <div class="termJS">
                 <h3 class='clickableJS'>JavaScript</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
               <div class="definitionJS">
                 <h3 class='clickableJS'>JavaScript</h3>
@@ -28,9 +30,10 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
+            <div id="OP" class="well">
               <div class="termOP">
                 <h3 class='clickableOP'>Operators</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
               <div class="definitionOP">
                 <h3 class='clickableOP'>Operators</h3>
@@ -40,9 +43,10 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
+            <div id="VA" class="well">
               <div class="termVA">
                 <h3 class='clickableVA'>Variables</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
               <div class="definitionVA">
                 <h3 class='clickableVA'>Variables</h3>
@@ -52,9 +56,10 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
+            <div id="VN" class="well">
               <div class="termVN">
                 <h3 class='clickableVN'>Variable Names</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
               <div class="definitionVN">
                 <h3 class='clickableVN'>Varible Names</h3>
@@ -66,9 +71,10 @@
         <!--row2-->
         <div class="row">
           <div class="col-sm-3">
-            <div class="well">
+            <div id="FU" class="well">
               <div class="termFU">
                 <h3 class='clickableFU'>Functions</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
               <div class="definitionFU">
                 <h3 class='clickableFU'>Functions</h3>
@@ -78,9 +84,10 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
+            <div id="MT" class="well">
               <div class="termMT">
                 <h3 class='clickableMT'>Methods</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
               <div class="definitionMT">
                 <h3 class='clickableMT'>Methods</h3>
@@ -90,9 +97,10 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
+            <div id="AR" class="well">
               <div class="termAR">
                 <h3 class='clickableAR'>Arguments</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
               <div class="definitionAR">
                 <h3 class='clickableAR'>Arguments</h3>
@@ -102,9 +110,10 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
+            <div id="PR" class="well">
               <div class="termPR">
                 <h3 class='clickablePR'>Parameters</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
               <div class="definitionPR">
                 <h3 class='clickablePR'>Parameters</h3>
@@ -116,105 +125,57 @@
         <!--row3-->
         <div class="row">
           <div class="col-sm-3">
-            <div class="well">
-              <div class="termJS">
-                <h3 class='clickableJS'>JavaScript</h3>
+            <div id="RE" class="well">
+              <div class="termRE">
+                <h3 class='clickableRE'>Return</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionJS">
-                <h3 class='clickableJS'>JavaScript</h3>
+              <div class="definitionRE">
+                <h3 class='clickableRE'>Return</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
-              <div class="termOP">
-                <h3 class='clickableOP'>Operators</h3>
+            <div id="CM" class="well">
+              <div class="termCM">
+                <h3 class='clickableCM'>NaN</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionOP">
-                <h3 class='clickableOP'>Operators</h3>
+              <div class="definitionCM">
+                <h3 class='clickableCM'>NaN</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
-              <div class="termVA">
-                <h3 class='clickableVA'>Variables</h3>
+            <div id="ST" class="well">
+              <div class="termST">
+                <h3 class='clickableST'>Strings</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionVA">
-                <h3 class='clickableVA'>Variables</h3>
+              <div class="definitionST">
+                <h3 class='clickableST'>Strings</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
-              <div class="termVN">
-                <h3 class='clickableVN'>Variable Names</h3>
+            <div id="BO" class="well">
+              <div class="termBO">
+                <h3 class='clickableBO'>Booleans</h3>
+                <i style="font-size:90px" class="fa">&#xf121;</i>
               </div>
-              <div class="definitionVN">
-                <h3 class='clickableVN'>Varible Names</h3>
+              <div class="definitionBO">
+                <h3 class='clickableBO'>Booleans</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
           </div>
         </div>
-        <!--row4-->
-        <div class="row">
-          <div class="col-sm-3">
-            <div class="well">
-              <div class="termJS">
-                <h3 class='clickableJS'>JavaScript</h3>
-              </div>
-              <div class="definitionJS">
-                <h3 class='clickableJS'>JavaScript</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-3">
-            <div class="well">
-              <div class="termOP">
-                <h3 class='clickableOP'>Operators</h3>
-              </div>
-              <div class="definitionOP">
-                <h3 class='clickableOP'>Operators</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-3">
-            <div class="well">
-              <div class="termVA">
-                <h3 class='clickableVA'>Variables</h3>
-              </div>
-              <div class="definitionVA">
-                <h3 class='clickableVA'>Variables</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-3">
-            <div class="well">
-              <div class="termVN">
-                <h3 class='clickableVN'>Variable Names</h3>
-              </div>
-              <div class="definitionVN">
-                <h3 class='clickableVN'>Varible Names</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
       </div>
     </div>
   </body>
