add major js improvement

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <div class="center-div">
         <div class="row">
           <div class="col-sm-3">
-            <div class="well">
-              <div class="term">
-                <h3 class='clickable'>JavaScript</h3>
+            <div class="well flashCard">
+              <div>
+                <h3>JavaScript</h3>
               </div>
               <div class="definition">
                 <h3 class='clickable'>JavaScript</h3>
@@ -28,7 +28,7 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
+            <div class="well flashCard">
               <div class="term">
                 <h3 class='clickable'>Operators</h3>
               </div>
@@ -40,7 +40,7 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
+            <div class="well flashCard">
               <div class="term">
                 <h3 class='clickable'>Variables</h3>
               </div>
@@ -52,7 +52,7 @@
           </div>
 
           <div class="col-sm-3">
-            <div class="well">
+            <div class="well flashCard">
               <div class="term">
                 <h3 class='clickable'>Variable Names</h3>
               </div>
